cod-tools (unreleased)

  * Added:
    - COD::CIF::Data::CIF2COD:
        - added the 'use_literal_newline' option to the concat_text_field()
          subroutine.
        - added the 'use_literal_newline_in_text_column' option to the cif2cod()
          subroutine.
    - dependency installer for Fedora 40.
  * Changed:
    - clarified option descriptions of the 'cif2cod' script.
    - sdf_add_cod_data:
        - rewrote the script in Perl.
        - update the script to replace Unicode whitespace symbols with regular
          spaces.
        - improved the handling of incorrectly looped chemical names.
  * Fixed:
    - updated the the ./tools/mkdiffdepend script to read the input file list
      from STDIN when no filenames are provided as command-line arguments.
    - COD::CIF::Parser::Yapp:
       - corrected the list of ASCII characters that are not allowed to appear
         in CIF 1.1 files.
    - COD::CIF::Unicode2CIF:
       - fixed the decoding of accented characters sequences that consists of
         a base character encoded as a numeric character reference and a single
         combining character encoded as a CIF special code.
    - cif.c:
       - updated the datablock_print_tag_values() function to only assign
         buffer space for an additional separator if the data block name
         is actually provided.
    - cif2cod:
        - fixed a character escape issue related to the 'text' field which
          caused invalid SQL output with certain input.

cod-tools (3.9.0)

  * Added:
    - cif_set_value:
        - the '--add-tag' option.
    - cif_split:
        - the '--uniquify-file-names' option.
    - cif_mark_disorder:
        - the '--reconstruct-symmetry' and '--uniquify-atoms' options as well
          as their negations. These options allow to optionally restore the
          full unit cell before carrying out the disorder site detection.
        - the '--die-on-errors', '--die-on-warnings', '--die-on-notes' options