@@ -7,6 +7,7 @@ cod-tools (unreleased)
         - added the 'use_literal_newline_in_text_column' option to the cif2cod()
           subroutine.
     - dependency installer for Fedora 40.
+    - dependency installer for Ubuntu 24.04.
   * Changed:
     - clarified option descriptions of the 'cif2cod' script.
     - sdf_add_cod_data:
